--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		<!-- div .header -->
 		<header class="header">
 			<h1 class="title" data-splitting><span class="title_paralax">Vishoo's</span><span class="stroke">
-					Design Resume</span></h1>
+					Portfolio</span></h1>
 			<div class="header__img">
 				<img src="img/1.jpg" alt="1">
 			</div>
